<resources>
    <string name="app_name">Anival</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="resend_verification_link_from_here">Resend verification email here.</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="you_have_error_opop_points">op</string>
    <string name="facebook_app_id">260468653320228</string>
    <string name="fb_login_protocol_scheme">fb260468653320228</string>
    <string name="facebook_app_secret">f92c08ec0758e3f1b57ec34a25214e17</string>
    <string name="facebook_client_token">9f209caeda5f63ef32cbe2a5ece468f1</string>
    <string name="anival_points">Anival Points</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="sign_in_with_facebook">Sign in With Facebook</string>
    <string name="new_at_anival_points">New at anival points?</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account">Create New Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">sign out</string>
    <string name="your_points">Your Points</string>
</resources>