<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMainRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen0_img_screen_size"
    tools:context=".login.MainActivity">

    <!--    <androidx.fragment.app.FragmentContainerView-->
    <!--        android:id="@+id/fragmentContainerView"-->
    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:defaultNavHost="true"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:navGraph="@navigation/login_nav"-->
    <!--        tools:layout="@layout/fragment_welcome_screen" />-->

<!--    android:layout_marginTop="-450dp"-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgAnivalLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo_final_01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/strokeBa4a0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/stroke_01"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgAnivalLogo"
        app:layout_constraintEnd_toEndOf="@+id/imgAnivalLogo"
        app:layout_constraintStart_toStartOf="@+id/imgAnivalLogo"
        app:layout_constraintTop_toTopOf="@+id/imgAnivalLogo" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/strokeBa4a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/stroke_01"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imgAnivalLogo"
        app:layout_constraintEnd_toEndOf="@+id/imgAnivalLogo"
        app:layout_constraintStart_toStartOf="@+id/imgAnivalLogo"
        app:layout_constraintTop_toTopOf="@+id/imgAnivalLogo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetStarted"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!--  1080  android:layout_height="1310px"-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoginRootContainer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="-500dp"
        android:background="@drawable/login_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailinput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_address"
            android:textColorHint="#575B66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#44AC93" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwinput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:textColorHint="#575B66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailinput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#44AC93" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#44AC93"
            app:layout_constraintStart_toStartOf="@+id/pwinput"
            app:layout_constraintTop_toBottomOf="@+id/pwinput" />

        <TextView
            android:id="@+id/tvResendVerificationLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/resend_verification_link_from_here"
            android:textColor="#44AC93"
            app:layout_constraintStart_toStartOf="@+id/tvForgotPassword"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInWithGoogle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSignInWithEmail"
            app:layout_constraintEnd_toStartOf="@+id/btnSignInWithFacebook"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInWithFacebook"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/sign_in_with_facebook"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btnSignInWithEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnSignInWithGoogle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInWithEmail"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/common_signin_button_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Newatanival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/new_at_anival_points"
            android:textColor="#6A6E79"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/create_account"
            android:textColor="#30B98F"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/Newatanival"
            app:layout_constraintTop_toTopOf="@+id/Newatanival" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRegisterRootContainer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="-500dp"
        android:background="@drawable/login_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstNameinput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/first_name"
            android:textColorHint="#575B66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCreateNewAccount">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#44AC93" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastNameinput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/last_name"
            android:textColorHint="#575B66"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameinput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#44AC93" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInput"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email_address"
            android:textColorHint="#575B66"
            app:layout_constraintEnd_toStartOf="@+id/spinnerProviders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameinput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="#44AC93" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerProviders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/emailInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailInput" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwInputRegister"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:textColorHint="#575B66"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#44AC93" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/alreadyHaveAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/already_have_an_account"
            android:textColor="#6A6E79"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvGoToSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/common_signin_button_text"
            android:textColor="#30B98F"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/alreadyHaveAnAccount"
            app:layout_constraintTop_toTopOf="@+id/alreadyHaveAnAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
